creating unit and integration tests